--- a/FriendFinder/nbproject/project.properties
+++ b/FriendFinder/nbproject/project.properties
@@ -49,7 +49,7 @@ manifest.apipermissions=
 manifest.file=manifest.mf
 manifest.jad=
 manifest.manifest=
-manifest.midlets=
+manifest.midlets=MIDlet-1: MainMIDlet, , main.MainMIDlet\n
 manifest.others=MIDlet-Vendor: Vendor\nMIDlet-Name: FriendFinder\nMIDlet-Version: 1.0\n
 manifest.pushregistry=
 name=FriendFinder
