Erste Screens und Grundfunktionalität. Kontakt auswählen, Mobilnummer extrahieren und SMS senden klappt. Erste Testfälle mit JMUnit eingebunden (lässt sich aufem Emulator über TestSuite starten). Verbindungsstruktur: P2PConnection ist oberstes Objekt, von dort Zugriff auf die SessionId und die beteiligten Personen me() und other()

--- a/FriendFinder/nbproject/project.properties
+++ b/FriendFinder/nbproject/project.properties
@@ -42,14 +42,14 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-libs.classpath=
+libs.classpath=${libs.NetBeans MIDP Components PDA.classpath};${libs.NetBeans MIDP Components.classpath};${libs.nb_svg_midp_components.classpath};${libs.JMUnit4CLDC10.classpath}
 main.class=
 main.class.class=applet
 manifest.apipermissions=
 manifest.file=manifest.mf
-manifest.jad=
+manifest.jad=JMUnitTestClasses: smsconnect.SMSRequestTest\n
 manifest.manifest=
-manifest.midlets=MIDlet-1: MainMIDlet, , main.MainMIDlet\n
+manifest.midlets=MIDlet-2: TestSuite, , jmunit.framework.cldc10.TestSuite\nMIDlet-1: MainMIDlet, , main.MainMIDlet\n
 manifest.others=MIDlet-Vendor: Vendor\nMIDlet-Name: FriendFinder\nMIDlet-Version: 1.0\n
 manifest.pushregistry=
 name=FriendFinder
