--- a/FriendFinder/nbproject/project.properties
+++ b/FriendFinder/nbproject/project.properties
@@ -116,9 +116,9 @@ ricoh.icon.invert=false
 ricoh.platform.target.version=
 run.cmd.options=-Xjam
 run.jvmargs=
-run.method=STANDARD
+run.method=OTA
 run.security.domain=manufacturer
-run.use.security.domain=false
+run.use.security.domain=true
 savaje.application.icon=
 savaje.application.icon.focused=
 savaje.application.icon.small=
@@ -136,7 +136,7 @@ semc.certificate.path=
 semc.private.key.password=
 semc.private.key.path=
 sign.alias=trusted
-sign.enabled=true
+sign.enabled=false
 sign.keystore=${file.reference.builtin.ks}
 src.dir=src
 use.emptyapis=true
