--- a/trunk/FriendFinder/nbproject/project.properties
+++ b/trunk/FriendFinder/nbproject/project.properties
@@ -116,7 +116,7 @@ ricoh.icon.invert=false
 ricoh.platform.target.version=
 run.cmd.options=-Xjam
 run.jvmargs=
-run.method=OTA
+run.method=STANDARD
 run.security.domain=manufacturer
 run.use.security.domain=true
 savaje.application.icon=
