--- a/trunk/FriendFinder/nbproject/project.properties
+++ b/trunk/FriendFinder/nbproject/project.properties
@@ -1,5 +1,5 @@
 abilities=MMAPI=1.1,SATSAJCRMI=1.0,SATSACRYPTO=1.0,JSR82=1.1,JSR226=1.0,MIDP=2.1,JSR229=1.1.0,SATSAAPDU=1.0,CLDC=1.1,JSR177=1.0,JSR179=1.0.1,J2MEWS=1.0,WMA=2.0,JSR172=1.0,OBEX=1.0,ColorScreen,JSR238=1.0,JSR239=1.0,JSR211=1.0,JSR234=1.0,ScreenWidth=240,JSR75=1.0,JSR184=1.1,SATSAPKI=1.0,ScreenHeight=320,ScreenColorDepth=8,JSR180=1.0.1,J2MEXMLRPC=1.0,
-all.configurations=\ 
+all.configurations=\ ,FriendFinderOTA,FriendFinderRegular
 application.args=
 application.description=
 application.description.detail=
@@ -9,6 +9,14 @@ build.classes.dir=${build.dir}/compiled
 build.classes.excludes=**/*.java,**/*.form,**/*.class,**/.nbintdb,**/*.mvd,**/*.wsclient,**/*.vmd
 build.dir=build/${config.active}
 build.root.dir=build
+configs.FriendFinderOTA.run.cmd.options=
+configs.FriendFinderOTA.run.method=OTA
+configs.FriendFinderOTA.run.security.domain=manufacturer
+configs.FriendFinderOTA.run.use.security.domain=true
+configs.FriendFinderRegular.run.cmd.options=-Xjam
+configs.FriendFinderRegular.run.method=STANDARD
+configs.FriendFinderRegular.run.security.domain=manufacturer
+configs.FriendFinderRegular.run.use.security.domain=true
 debug.level=debug
 deployment.copy.target=${file.reference.deploy}
 deployment.deviceanywhere.device=-1
@@ -116,7 +124,7 @@ ricoh.icon.invert=false
 ricoh.platform.target.version=
 run.cmd.options=-Xjam
 run.jvmargs=
-run.method=STANDARD
+run.method=OTA
 run.security.domain=manufacturer
 run.use.security.domain=true
 savaje.application.icon=
