--- a/trunk/FriendFinder/nbproject/project.properties
+++ b/trunk/FriendFinder/nbproject/project.properties
@@ -122,7 +122,7 @@ ricoh.dalp.resources.jar.version=
 ricoh.dalp.version=
 ricoh.icon.invert=false
 ricoh.platform.target.version=
-run.cmd.options=-Xjam
+run.cmd.options=
 run.jvmargs=
 run.method=OTA
 run.security.domain=manufacturer
