--- a/FriendFinder/nbproject/project.properties
+++ b/FriendFinder/nbproject/project.properties
@@ -13,12 +13,12 @@ configs.FriendFinderOTA.run.cmd.options=
 configs.FriendFinderOTA.run.method=OTA
 configs.FriendFinderOTA.run.security.domain=manufacturer
 configs.FriendFinderOTA.run.use.security.domain=true
-configs.FriendFinderRegular.run.cmd.options=-Xjam
+configs.FriendFinderRegular.run.cmd.options=
 configs.FriendFinderRegular.run.method=STANDARD
 configs.FriendFinderRegular.run.security.domain=manufacturer
 configs.FriendFinderRegular.run.use.security.domain=true
 debug.level=debug
-deployment.copy.target=${file.reference.deploy}
+deployment.copy.target=${file.reference.FriendFinder-deploy}
 deployment.deviceanywhere.device=-1
 deployment.instance=default
 deployment.jarurl=${dist.jar}
@@ -31,7 +31,7 @@ dist.javadoc.dir=${dist.dir}/doc
 dist.root.dir=dist
 extra.classpath=
 file.reference.builtin.ks=${netbeans.user}/config/j2me/builtin.ks
-file.reference.deploy=deploy
+file.reference.FriendFinder-deploy=deploy
 filter.exclude.tests=false
 filter.excludes=
 filter.more.excludes=
@@ -56,13 +56,13 @@ javadoc.windowtitle=
 libs.classpath=${libs.NetBeans MIDP Components PDA.classpath};${libs.NetBeans MIDP Components.classpath};${libs.nb_svg_midp_components.classpath};${libs.JMUnit4CLDC10.classpath};${libs.NetBeans MIDP Components WMA.classpath}
 main.class=
 main.class.class=applet
-manifest.apipermissions=MIDlet-Permissions: javax.microedition.io.Connector.sms, javax.microedition.io.PushRegistry, javax.wireless.messaging.sms.send, javax.wireless.messaging.sms.receive, javax.microedition.pim.ContactList.read, javax.microedition.pim.ContactList.write, javax.microedition.io.Connector.http, javax.microedition.io.Connector.bluetooth.client, javax.microedition.io.Connector.bluetooth.server\n
+manifest.apipermissions=MIDlet-Permissions: javax.microedition.io.Connector.sms, javax.microedition.io.PushRegistry, javax.wireless.messaging.sms.send, javax.wireless.messaging.sms.receive, javax.microedition.pim.ContactList.read, javax.microedition.pim.ContactList.write, javax.microedition.io.Connector.http, javax.microedition.io.Connector.bluetooth.client, javax.microedition.io.Connector.bluetooth.server, javax.microedition.location.Location\n
 manifest.file=manifest.mf
 manifest.jad=JMUnitTestClasses: smsconnect.SMSRequestTest\n
 manifest.manifest=
-manifest.midlets=MIDlet-2: TestSuite, , jmunit.framework.cldc10.TestSuite\nMIDlet-1: MainMIDlet, , main.MainMIDlet\n
+manifest.midlets=MIDlet-1: FriendFinder,,main.FriendFinder\n
 manifest.others=MIDlet-Vendor: Ahrend,Petroff,Winkler\nMIDlet-Name: FriendFinder\nMIDlet-Version: 1.0\n
-manifest.pushregistry=MIDlet-Push-1: sms://:15123,main.MainMIDlet,*\n
+manifest.pushregistry=MIDlet-Push-1: sms://:15123,main.FriendFinder,*\n
 name=FriendFinder
 no.dependencies=false
 nokiaS80.application.icon=
@@ -79,7 +79,7 @@ obfuscator.srcjar=${build.dir}/before-obfuscation.jar
 platform.active=Sun_Java_TM__Wireless_Toolkit_2_5_2_for_CLDC
 platform.active.description=Sun Java(TM) Wireless Toolkit 2.5.2 for CLDC
 platform.apis=JSR234-1.0,SATSA-APDU-1.0,JSR211-1.0,JSR75-1.0,J2ME-WS-1.0,JSR172-1.0,J2ME-XMLRPC-1.0,JSR82-1.1,SATSA-JCRMI-1.0,SATSA-CRYPTO-1.0,JSR239-1.0,JSR179-1.0.1,JSR184-1.1,JSR238-1.0,MMAPI-1.1,OBEX-1.0,JSR229-1.1.0,SATSA-PKI-1.0,JSR180-1.0.1,JSR226-1.0,JSR177-1.0,WMA-2.0
-platform.bootclasspath=${platform.home}/lib/jsr226.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
+platform.bootclasspath=${platform.home}/lib/jsr226.jar:${platform.home}/lib/satsa-crypto.jar:${platform.home}/lib/jsr229.jar:${platform.home}/lib/jsr238.jar:${platform.home}/lib/j2me-xmlrpc.jar:${platform.home}/lib/jsr211.jar:${platform.home}/lib/satsa-jcrmi.jar:${platform.home}/lib/satsa-apdu.jar:${platform.home}/lib/jsr082.jar:${platform.home}/lib/jsr184.jar:${platform.home}/lib/jsr239.jar:${platform.home}/lib/jsr75.jar:${platform.home}/lib/jsr179.jar:${platform.home}/lib/satsa-pki.jar:${platform.home}/lib/jsr180.jar:${platform.home}/lib/mmapi.jar:${platform.home}/lib/j2me-ws.jar:${platform.home}/lib/wma20.jar:${platform.home}/lib/jsr234.jar:${platform.home}/lib/cldcapi11.jar:${platform.home}/lib/midpapi20.jar
 platform.configuration=CLDC-1.1
 platform.device=DefaultColorPhone
 platform.fat.jar=true
