--- a/trunk/FriendFinder/nbproject/project.properties
+++ b/trunk/FriendFinder/nbproject/project.properties
@@ -124,7 +124,7 @@ ricoh.icon.invert=false
 ricoh.platform.target.version=
 run.cmd.options=
 run.jvmargs=
-run.method=STANDARD
+run.method=OTA
 run.security.domain=manufacturer
 run.use.security.domain=true
 savaje.application.icon=
